<resources>

    <string name="app_name" translatable="false">BicoccaJobs</string>
    <string name="shop">shop: </string>
    <string name="library">CHOOSE FROM LIBRARY</string>
    <string name="cancel">CANCEL</string>
    <string name="select">Select</string>
    <string name="toast_info">Fill all the fields</string>
    <string name="missing_title">Title required!</string>
    <string name="missing_des">Description required!</string>
    <string name="toast_upload">Post uploaded!</string>
    <string name="toast_storage">Permission granted!</string>
    <string name="waiting_data">Uploading data please wait...</string>

    <string name="confirm">Confirmation?</string>
    <string name="sign_out_conf">Are you sure to sign out?</string>
    <string name="prepearing">Prepearing app functions...</string>
    <string name="account_not_complete">Account not completed!</string>
    <string name="account_not_complete_popup">Please complete your account from profile screen.</string>

    <string name="network_check">Check your network!</string>
    <string name="required">Required</string>
    <string name="reset">Password reset email sent successfully</string>
    <string name="signing">Singing in...</string>
    <string name="incorrect_details">Incorrect details</string>
    <string name="sign_in_succesful">Sign in successful</string>

    <string name="select_image">Select image</string>
    <string name="update_succesfully">Update succesfully</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="uploading_picture">Uploading Picture...</string>
    <string name="updated_picture">Updated Picture...</string>
    <string name="email_not_verify">Email not Verified, Click to Verify</string>
    <string name="email_verify">Email Verified</string>
    <string name="email_sent">Verification email sent</string>

    <string name="no_post_added">No posts added!</string>
    <string name="title">Title: </string>
    <string name="confirmation">Confirmation</string>
    <string name="delete">Are you sure to delete this post?</string>
    <string name="item_delete">Item deleted</string>
    <string name="loading_data">Loading data..</string>

    <string name="no_match">Does not match!</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="please_wait">Please wait..</string>
    <string name="students">Students</string>
    <string name="account_created">Account created on email password and verification email sent </string>

    <string name="detail_saved">Your details saved</string>
    <string name="getting_position">Getting Your Current Location..</string>

    <string name="email_not_verify_2">Email not Verified</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="short_description">Short Description</string>
    <string name="add_post">ADD POST</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="address">Address</string>
    <string name="candidate_email">Apply For The Job</string>
    <string name="post_added_succesfully">Post Added Successfully</string>
    <string name="add_another">ADD ANOTHER</string>
    <string name="go_to_homepage">GO TO HOMEPAGE</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="select_your_choice">Select Your Choice</string>
    <string name="shop_2">Shop</string>
    <string name="loading">Loading..</string>
    <string name="add_job_post">Add Job Post</string>
    <string name="view_my_posts">View My Posts</string>
    <string name="view_all_posts">View All Posts</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_details">Edit Your Profile Details</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="view_job_posts">View Job Posts</string>
    <string name="please_verify">Please verify email and then click next</string>
    <string name="next">Next</string>
    <string name="resend">Resend</string>
    <string name="all_job">Job Post</string>
    <string name="my_post">My Post</string>

    <string name="no_reg">Not registered yet? Sign up now!</string>
    <string name="yes_reg">Already registered? Sign in now!</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="welcome">WELCOME TO</string>
    <string name="yes">Yes</string>

    <string name = "error_camera">Error starting camera</string>
    <string name = "photo_fail">Photo capture failed: </string>

</resources>