<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ttvn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/post_added_succesfully"
                android:textAlignment="center"
                android:textColor="@color/blueback"
                android:textSize="34sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/imageView2"
                android:drawableLeft="@drawable/ic_add"
                android:backgroundTint="@color/blueback"
                android:textColor="@color/yellowback"
                android:layout_centerHorizontal="true"
                android:text="@string/add_another"
                android:id="@+id/btnAdd"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/btnAdd"
                android:drawableLeft="@drawable/ic_home"
                android:backgroundTint="@color/blueback"
                android:textColor="@color/yellowback"
                android:layout_centerHorizontal="true"
                android:text="@string/go_to_homepage"
                android:id="@+id/btnHome"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="431dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:translationY="69dp"
                app:srcCompat="@drawable/baseline_add_task_24" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>