<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/imgBack"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUserPic"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_below="@+id/imgBack"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/holder"
                app:civ_border_color="@color/purple_500"
                app:civ_border_width="0.5dp" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgBack"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/imgUserPic"
                android:text="Shop Name"
                android:textColor="@color/blueback"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/imgUserPic"
                android:elevation="5dp"
                app:cardCornerRadius="10dp"
                android:id="@+id/card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        app:tabBackground="@drawable/tab_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="2dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvPlantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="Job Title"
                android:textColor="@color/blueback"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPlantName"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/short_description"
                android:textColor="@color/blueback"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvD"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="Testing description"
                android:textColor="@color/blueback" />

            <TextView
                android:id="@+id/tvAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDescription"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="@color/blueback"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAddr"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="Testing Address"
                android:textColor="@color/blueback" />
            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tvDescription"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="#DCD9D9" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/btnEmail"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentBottom="true"
                android:background="@color/purple_500"
                android:layout_marginBottom="10dp"
                android:text="@string/candidate_email"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/yellowback"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>