<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9FCFD">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#F9FCFD"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F9FCFD">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginRight="-30dp"
                    android:background="@drawable/background_design"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/loading"
                        android:textColor="#fff"
                        android:textSize="26sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="199dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="135dp"
                            app:cardCornerRadius="12dp"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardBackgroundColor="#FFFFFF"
                            android:layout_weight="0.8"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:id="@+id/imgWholesale"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/ic_list"
                                    android:layout_centerInParent="true"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/view_job_posts"
                                    android:textSize="16sp"
                                    android:id="@+id/tvSub1"
                                    android:textColor="#000"
                                    android:layout_below="@+id/imgWholesale"
                                    android:layout_centerHorizontal="true"
                                    android:textAlignment="center" />

                                <Button
                                    android:id="@+id/btnViewRequest"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />
                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="135dp"
                            android:layout_weight="0.8"
                            android:layout_marginRight="5dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="12dp"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="vertical"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:id="@+id/imgOrder"
                                    android:src="@drawable/ic_person"
                                    app:tint="@color/purple_500"
                                    android:scaleType="fitXY"
                                    android:layout_centerInParent="true"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profile"
                                    android:textSize="16sp"
                                    android:id="@+id/tvSub3"
                                    android:textColor="#000"
                                    android:layout_below="@+id/imgOrder"
                                    android:textAlignment="center"
                                    android:layout_centerHorizontal="true" />

                                <Button
                                    android:id="@+id/btnProfile"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />
                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="135dp"
                            android:layout_weight="0.8"
                            android:layout_gravity="center"
                            app:cardCornerRadius="12dp"
                            android:layout_marginLeft="5dp"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="vertical"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:id="@+id/img2"
                                    android:src="@drawable/ic_exit"
                                    android:scaleType="fitXY"
                                    android:layout_centerInParent="true"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sign_out"
                                    android:textSize="16sp"
                                    android:id="@+id/tvHist"
                                    android:textColor="#000"
                                    android:layout_below="@+id/img2"
                                    android:layout_centerHorizontal="true"
                                    android:textAlignment="center" />

                                <Button
                                    android:id="@+id/btnSignOut"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />
                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>